--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,19 @@
 body{
     background-color: rgb(152, 115, 115);
 	display: flex;
+	flex-direction: column;
 }
 
+header{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
+a{
+	text-decoration: none;
+	color: #000;
+}
 
 .menu-header{
 	display: flex;
@@ -28,8 +38,9 @@ body{
 
 .menu-background{
 	background-color: white;
-	width: 100%;
-	height: 590px;
+	width: 1015px;
+	height: auto;
+	padding: 10px;
 }
 
 .menu-background h1{
@@ -43,12 +54,87 @@ body{
 }
 
 .menu-item-box{
-	width: 98%;
-	height: 24%;
+	width: auto;
+	height: auto;
 	background-color: white;
 	border-style: solid;
 	border-width: 2px;
 	border-color: black;
 	display: flex;
 	flex-direction: row;
+	font-size: 30px;
+	position: relative;
+}
+
+input[type="text"]{
+	border-radius: 5px;
+	background-color: white;
+	box-shadow: 1px 1px 3px #000;
+}
+
+.update-button, .delete-button{
+	border-radius: 10px;
+	height: 30px;
+	width: 70px;
+	background-color: white;
+	box-shadow: 1px 1px 3px #000;
+}
+
+.product-naam{
+	font-size: 100px;
+}
+
+.beschrijving{
+	font-style: italic;
+    font-size: 14px;
+    line-height: 1.5;
+	position: relative;
+	top: 100px;
+	right: 60px;
+
+}
+
+.chopstick-plus{
+	width: 70px;
+	height: 70px;
+	position: absolute;
+	top: 3px;
+	right: 3px;
+	
+}
+
+.winkelmandje{
+	height: 1000px;
+	width: 100%;
+	background-color: rgb(255, 255, 255);
+}
+
+.winkelmandje h1{
+	display: flex;
+	justify-content: center;
+	align-items: center ;
+}
+
+.winkelmandje-header{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+
+hr{
+	border-width: 2px;
+	border-color: black;
+}
+
+.menu-kaart-wrapper{
+	display: flex;
+    justify-content: space-between; 
+    align-items: flex-start; 
+}
+
+.create{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
